--- a/public/index.html
+++ b/public/index.html
@@ -23,88 +23,80 @@
                 Add recipe
             </button>
         </div>
-        <div class="search-bar">
-            <label for="search"></label>
-            <input type="text" name="search" id="search" placeholder="Type here..." autocomplete="off">
-            <span class="material-symbols-outlined">
-                search
-            </span>
-
-        </div>
-
-        <div class="add-recipe-container hide">
-            <div class="add-recipe-wrapper">
-                <button type="button" class="add-recipe-close-btn">
-                    <span class="material-symbols-outlined">close</span>
-                </button>
-                <h2>Add new recipe</h2>
-                <form id="addRecipeForm" enctype="multipart/form-data">
-                    <div>
-                        <label for="title">Title</label>
-                        <input type="text" name="title" id="title" required>
-                    </div>
-                    <div>
-                        <label for="ingredients">Ingredients</label>
-                        <textarea name="ingredients" id="ingredients" required></textarea>
-                    </div>
-                    <div>
-                        <label for="description">Description</label>
-                        <textarea name="description" id="description" required></textarea>
-                    </div>
-                    <div>
-                        <label for="recipeImage" class="recipe-upload">Upload image</label>
-                        <input type="file" name="recipeImage" id="recipeImage" accept=".jpg, .jpeg, .png">
-                        <img id="addImagePreview" src="" alt="preview imge" />
-                    </div>
-                    <button type="submit">Save</button>
-                </form>
+        <div class="wrapper">
+            <div class="search-bar">
+                <label for="search"></label>
+                <input type="text" name="search" id="search" placeholder="Type here..." autocomplete="off">
+                <span class="material-symbols-outlined">
+                    search
+                </span>
             </div>
-        </div>
-        <div>
-            <div class="modal-recipe hide">
-                <div class="modal-recipe-container">
-                    <div class="modal-recipe-content"></div>
-                    <div class="edit-recipe-form-container hide">
-                        <form id="editRecipeForm">
-                            <input type="hidden" id="editId" name="id">
-
-                            <div>
-                                <label for="editTitle">Title</label>
-                                <input type="text" name="title" id="editTitle" maxlength="27">
-                            </div>
-
-                            <div>
-                                <label for="editIngredients">Ingredients</label>
-                                <textarea name="ingredients" id="editIngredients"></textarea>
-                            </div>
-
-                            <div>
-                                <label for="editDescription">Description</label>
-                                <textarea name="description" id="editDescription"></textarea>
-                            </div>
-
-                            <div>
-                                <img id="editImagePreview" src="" alt="preview imge" />
-                                <label for="editRecipeImage" class="recipe-upload">Upload new image</label>
-                                <input type="file" name="image" id="editRecipeImage" accept=".jpg, .jpeg, .png"
-                                    class="hide">
-                            </div>
-
-                            <button type="submit" id="saveEditRecipe">Save</button>
-                        </form>
-
+            <div class="add-recipe-container hide">
+                <div class="add-recipe-wrapper">
+                    <button type="button" class="add-recipe-close-btn">
+                        <span class="material-symbols-outlined">close</span>
+                    </button>
+                    <h2>Add new recipe</h2>
+                    <form id="addRecipeForm" enctype="multipart/form-data">
+                        <div>
+                            <label for="title">Title</label>
+                            <input type="text" name="title" id="title" required>
+                        </div>
+                        <div>
+                            <label for="ingredients">Ingredients</label>
+                            <textarea name="ingredients" id="ingredients" required></textarea>
+                        </div>
+                        <div>
+                            <label for="description">Description</label>
+                            <textarea name="description" id="description" required></textarea>
+                        </div>
+                        <div>
+                            <label for="recipeImage" class="recipe-upload">Upload image</label>
+                            <input type="file" name="recipeImage" id="recipeImage" accept=".jpg, .jpeg, .png">
+                            <img id="addImagePreview" src="" alt="preview imge" />
+                        </div>
+                        <button type="submit">Save</button>
+                    </form>
+                </div>
+            </div>
+            <div>
+                <div class="modal-recipe hide">
+                    <div class="modal-recipe-container">
+                        <div class="modal-recipe-content"></div>
+                        <div class="edit-recipe-form-container hide">
+                            <form id="editRecipeForm">
+                                <input type="hidden" id="editId" name="id">
+                                <div>
+                                    <label for="editTitle">Title</label>
+                                    <input type="text" name="title" id="editTitle" maxlength="27">
+                                </div>
+                                <div>
+                                    <label for="editIngredients">Ingredients</label>
+                                    <textarea name="ingredients" id="editIngredients"></textarea>
+                                </div>
+                                <div>
+                                    <label for="editDescription">Description</label>
+                                    <textarea name="description" id="editDescription"></textarea>
+                                </div>
+                                <div>
+                                    <img id="editImagePreview" src="" alt="preview imge" />
+                                    <label for="editRecipeImage" class="recipe-upload">Upload new image</label>
+                                    <input type="file" name="image" id="editRecipeImage" accept=".jpg, .jpeg, .png"
+                                        class="hide">
+                                </div>
+                                <button type="submit" id="saveEditRecipe">Save</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-
-        <div class="card-container">
-            <div class="cards"></div>
-            <div class="pagerButtonContainer">
-                <button type="button" id="loadMoreButton">
-                    Load more...
-                </button>
+            <div class="card-container">
+                <div class="cards"></div>
+                <div class="pagerButtonContainer">
+                    <button type="button" id="loadMoreButton">
+                        Load more...
+                    </button>
+                </div>
             </div>
         </div>
     </main>
