--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                                 <input type="hidden" id="editId" name="id">
                                 <div>
                                     <label for="editTitle">Title</label>
-                                    <input type="text" name="title" id="editTitle" maxlength="27">
+                                    <input type="text" name="title" id="editTitle">
                                 </div>
                                 <div>
                                     <label for="editIngredients">Ingredients</label>
